--- a/index.html
+++ b/index.html
@@ -5,52 +5,82 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Banco de Café – Neueröffnung</title>
 
-  <!-- Inter als moderne System-Sans -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
   <style>
-    :root{ --accent:#C19A6B; --bg:#111; --text:#f6f6f6; }
+    :root{
+      --accent:#C19A6B;
+      --bg:#111;
+      --text:#f6f6f6;
+      --max-width:900px;
+    }
     *,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
-    body{font-family:'Inter',sans-serif;background:var(--bg);color:var(--text);overflow-x:hidden;scroll-behavior:smooth}
+    body{font-family:'Inter',sans-serif;background:var(--bg);color:var(--text);scroll-behavior:smooth;overflow-x:hidden}
 
     /* ---------- HERO / PARALLAX ---------- */
-    .hero{position:relative;height:100vh;perspective:1px;overflow:hidden}
+    .hero{position:relative;height:100vh;overflow:hidden;perspective:1px}
     .layer{position:absolute;inset:0;background-size:cover;background-position:center}
-    .bg   {transform:translateZ(-1px) scale(2);background:url('assets/hero.jpg') no-repeat center/cover}
+    .bg   {transform:translateZ(-1px) scale(2.2);background:url('assets/hero.jpg') center/cover no-repeat}
     .shade{background:rgba(0,0,0,.55)}
     .content{
       position:relative;z-index:1;display:flex;flex-direction:column;align-items:center;
-      justify-content:center;height:100%;padding:0 1rem;text-align:center
+      width:100%;max-width:var(--max-width);margin:0 auto;
+      padding:6vh 1rem 0;   /* Abstand zum oberen Rand */
+      text-align:center;animation:fadeIn .9s ease-out both .2s
     }
-    #logo{width:220px;max-width:70vw;margin-bottom:2.8rem;will-change:transform}
-    h1{font-weight:600;font-size:clamp(2.8rem,7vw,5rem);letter-spacing:.02em;text-transform:uppercase}
-    .sub{margin-top:1rem;font-size:1.2rem;font-weight:300;opacity:.9;max-width:28ch}
+    #logo{width:min(260px,36vw);max-width:90%;margin-bottom:clamp(2.5rem,5vw,4.2rem);will-change:transform}
+
+    h1{
+      font-weight:600;
+      font-size:clamp(2.8rem,6.5vw,5.2rem);
+      letter-spacing:.02em;text-transform:uppercase;
+      line-height:1.15;
+    }
+    .sub{
+      margin-top:clamp(1.2rem,2.2vw,1.8rem);
+      font-size:clamp(1.2rem,1.8vw,1.4rem);
+      font-weight:300;opacity:.9;max-width:32ch
+    }
     .btn{
-      display:inline-block;margin-top:3rem;padding:1rem 2.6rem;border:none;border-radius:4px;
-      background:var(--accent);color:#fff;font-weight:600;font-size:1rem;text-decoration:none;
+      display:inline-block;margin-top:clamp(2.8rem,5vw,4rem);
+      padding:1rem 2.6rem;border:none;border-radius:4px;
+      background:var(--accent);color:#fff;font-weight:600;
+      font-size:1rem;text-decoration:none;
       transition:transform .25s cubic-bezier(.4,0,.2,1)
     }
     .btn:hover{transform:translateY(-4px)}
     .btn:active{transform:translateY(-1px)}
 
-    /* ---------- SECTIONS ---------- */
-    section{max-width:900px;margin:0 auto;padding:5rem 1rem;
-      opacity:0;transform:translateY(60px);transition:opacity .8s,transform .8s}
+    /* ---------- SECTION LAYOUT ---------- */
+    section{
+      max-width:var(--max-width);margin:0 auto;
+      padding:clamp(3.5rem,7vw,5.5rem) 1rem;
+      opacity:0;transform:translateY(60px);
+      transition:opacity .8s ease-out,transform .8s ease-out
+    }
     section.reveal{opacity:1;transform:none}
-    h2{font-weight:600;font-size:2rem;margin-bottom:1.2rem;color:var(--accent);text-align:center}
-    p{text-align:center;font-size:1.1rem;line-height:1.7;max-width:60ch;margin:0 auto}
+    h2{
+      font-weight:600;font-size:clamp(1.9rem,3.2vw,2.2rem);
+      margin-bottom:1.2rem;color:var(--accent);text-align:center
+    }
+    p{
+      text-align:center;font-size:clamp(1.1rem,1.4vw,1.2rem);
+      line-height:1.7;max-width:60ch;margin:0 auto;
+    }
 
     /* ---------- FOOTER ---------- */
-    footer{background:#000;padding:2rem 1rem;text-align:center;font-size:.9rem}
+    footer{
+      background:#000;text-align:center;
+      font-size:.9rem;padding:2rem 1rem
+    }
 
-    /* ---------- KEYFRAMES ---------- */
     @keyframes fadeIn{to{opacity:1}}
-    .content{animation:fadeIn 1.2s ease-out both .2s}
   </style>
 </head>
 <body>
 
+<!-- HERO -->
 <header class="hero">
   <div class="layer bg"></div>
   <div class="layer shade"></div>
@@ -58,38 +88,42 @@
   <div class="content">
     <img id="logo" src="assets/logo.svg" alt="Banco de Café Logo">
     <h1>Neueröffnung</h1>
-    <p class="sub">Wir bringen Specialty&nbsp;Coffee &nbsp;– ab&nbsp;7.&nbsp;August&nbsp;2025 in München-Laim.</p>
+    <p class="sub">Unser Specialty-Coffee-Spot öffnet am&nbsp;7.&nbsp;August&nbsp;2025 in München-Laim.</p>
     <a class="btn" href="mailto:info@banko-de-cafe.de">Kontakt&nbsp;aufnehmen</a>
   </div>
 </header>
 
+<!-- ABOUT -->
 <section id="about">
   <h2>Kaffee · Kultur · Community</h2>
-  <p>Ein minimalistischer Treffpunkt für Kaffeeliebhaber.  
-     Genieße sorgfältig geröstete Bohnen, feine Pâtisserie und entspanntes Ambiente.</p>
+  <p>Ein minimalistischer Treffpunkt für echte Kaffee­liebhaber – mit sorgfältig gerösteten Bohnen,
+     hausgemachter Pâtisserie und entspanntem Ambiente.</p>
 </section>
 
+<!-- LOCATION -->
 <section id="location">
   <h2>Adresse</h2>
-  <p>Fürstenrieder Str. 8<br>80687 München</p>
-  <p style="margin-top:1.2rem;font-size:1rem;opacity:.85">
-     Tel.&nbsp;<a style="color:inherit;text-decoration:none" href="tel:+4917631115508">0176&nbsp;3111&nbsp;5508</a> ·
-     E-Mail&nbsp;<a style="color:inherit;text-decoration:none" href="mailto:info@banko-de-cafe.de">info@banko-de-cafe.de</a>
+  <p>Fürstenrieder&nbsp;Str.&nbsp;8<br>80687&nbsp;München</p>
+  <p style="margin-top:1.4rem;font-size:1rem;opacity:.85">
+     Tel.&nbsp;<a href="tel:+4917631115508" style="color:inherit;text-decoration:none">0176&nbsp;3111&nbsp;5508</a> ·
+     <a href="mailto:info@banko-de-cafe.de" style="color:inherit;text-decoration:none">info@banko-de-cafe.de</a>
   </p>
 </section>
 
 <footer>© 2025 Banco de Café</footer>
 
-<!-- ---------- JS: Reveal & dezente Logo-Parallax ---------- -->
+<!-- ---------- JS: Reveal + Logo-Parallax ---------- -->
 <script>
   /* Section-Reveal */
-  const io=new IntersectionObserver(e=>e.forEach(x=>x.isIntersecting&&x.target.classList.add('reveal')),
-                                    {threshold:.25});
+  const io=new IntersectionObserver(e=>e.forEach(x=>x.isIntersecting&&x.target.classList.add('reveal')), {threshold:.25});
   document.querySelectorAll('section').forEach(s=>io.observe(s));
 
-  /* Logo-Parallax */
+  /* Logo-Parallax (dezente Bewegung) */
   const logo=document.getElementById('logo');
-  window.addEventListener('scroll',()=>logo.style.transform=`translateY(${window.scrollY*0.08}px)`);
+  window.addEventListener('scroll', () => {
+    const y=window.scrollY*0.06;              // geringer Faktor → Motion-Comfort
+    logo.style.transform=`translateY(${y}px)`;
+  });
 </script>
 </body>
 </html>
